// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a component 1`] = `
<p
  className="sc-bdVaJa gryQsq"
  color="#0082c8"
>
  default text
</p>
`;

exports[`should render a component with a color 1`] = `
<p
  className="sc-bdVaJa ceQhJg"
  color="black"
>
  default text
</p>
`;

exports[`should render a component with a prop 1`] = `
<p
  className="sc-bdVaJa cZFZBJ"
  color="#0082c8"
>
  default text
</p>
`;
